# blurr

./: .gitignore  .pre-commit-config.yaml  CLI_IMPLEMENTATION_SUMMARY.md  Dockerfile  Makefile  README.md  STREAMLIT_APP_GUIDE.md  default.yaml  demo_alternatives.md  demo_cli.py  pyproject.toml  test_streamlit_app.py
.kiro/specs/privacy-redactor-rt/: design.md  requirements.md  tasks.md
frontend/: README.md
privacy_redactor_rt/: __init__.py  address_rules.py  app.py  classify.py  cli.py  config.py  enhanced_detector.py  enhanced_realtime.py  fastapi_app.py  gradio_app.py  logging_utils.py  ocr.py  onnx_detector.py  optimized_detector.py  optimized_gradio_app.py  optimized_realtime.py  patterns.py  pipeline.py  realtime_detector.py  recorder.py  redact.py  text_detect.py  track.py  track_README.md  types.py  ui_detect.py  validators.py  video_source.py  webrtc_utils.py
tests/: __init__.py  conftest.py  test_address_rules.py  test_app_integration.py  test_classify.py  test_cli.py  test_config.py  test_integration_simple.py  test_logging_utils.py  test_ocr.py  test_ocr_integration.py  test_patterns.py  test_pipeline_integration.py  test_recorder.py  test_redact.py  test_text_detect.py  test_track.py  test_track_basic.py  test_types.py  test_validators.py  test_video_source.py  test_webrtc_integration.py
